alignment fix

--- a/public/styles/jstemplates/less/docs.less
+++ b/public/styles/jstemplates/less/docs.less
@@ -18,7 +18,7 @@
 /*     	background: @dark-color; */
         }
     h1 .product-name {
-        font-size: 2em;
+        font-size: 1.9em;
         font-family: @fonts-header;
         }
     h1 .product-name span {
@@ -111,7 +111,7 @@
         }
     
     .toc table {
-    	margin: 0;
+    	margin: 0.5em 0 0 0;
     	width: 960px;
     	background: @dark-color;
     }
